Misc. edits.